--- a/data_science_skills.Rmd
+++ b/data_science_skills.Rmd
@@ -29,6 +29,9 @@ library(openintro)
 library(RMySQL)
 library(ggplot2)
 
+library(Hmisc)
+library(corrplot)
+
 ```
 
 
@@ -41,116 +44,10 @@ usr <- keyring::key_list("DATA607")[1,2]
 pwd <-  keyring::key_get("DATA607", usr)
 con = dbConnect(MySQL(), user=usr, password=pwd, dbname='DATA607', host='localhost')
 
-```
 
-
-
-```{r read create database tables}
-
-# Job Opening
-query <- "DROP TABLE IF EXISTS JobOpenings CASCADE;"
-results <- dbSendQuery(con, query)
-query<-"CREATE TABLE JobOpenings (
-    job_id			    INT,
-    min_experience		INT,
-    max_experience		INT,
-    skill			    TEXT,
-    location		    TEXT,
-    min_salary		    INT,
-    max_salary		    INT,
-    company_id		    INT,
-    PRIMARY KEY (job_id)
-);"
-results <- dbSendQuery(con, query)
-dbClearResult(results)
-
-
-
-query <- "DROP TABLE IF EXISTS JobSeekers CASCADE;"
-results <- dbSendQuery(con, query)
-query <- "CREATE TABLE JobSeekers (
-    resp_id		        INT,
-    gender		        TEXT,
-    age		            INT,
-    location	        TEXT,
-    education	        TEXT,
-    major	            TEXT,
-    title	            TEXT,
-    industry	        TEXT,
-    experience	        TEXT,
-    dataScientist	    TEXT,
-    primarySkill	    TEXT,
-    skill		        TEXT,
-    PRIMARY KEY (resp_id)
-);"
-results <- dbSendQuery(con, query)
-dbClearResult(results)
-
-
-
-query <- "DROP TABLE IF EXISTS JobSalary CASCADE;"
-results <- dbSendQuery(con, query)
-query <- "CREATE TABLE JobSalary	 (
-    id			        INT,
-    min			        INT,
-    max			        INT,
-    PRIMARY KEY (id)
-);"
-results <- dbSendQuery(con, query)
-dbClearResult(results)
-
-
-
-query <- "DROP TABLE IF EXISTS JobLocation CASCADE;"
-results <- dbSendQuery(con, query)
-query <- "CREATE TABLE JobLocation	 (
-    id				INT,    
-    location_id		INT
-);"
-results <- dbSendQuery(con, query)
-dbClearResult(results)
-
-
-
-query <- "DROP TABLE IF EXISTS JobRequirements CASCADE;"
-results <- dbSendQuery(con, query)
-query <- "CREATE TABLE JobRequirements (
-    id			    INT,
-    skill_id		INT
-);"
-results <- dbSendQuery(con, query)
-dbClearResult(results)
-
-
-
-query <- "DROP TABLE IF EXISTS JobSeekerSkills CASCADE;"
-results <- dbSendQuery(con, query)
-query <- "CREATE TABLE JobSeekerSkills (
-    id			    INT,
-    skill_id		INT,
-    PRIMARY KEY (id)
-);"
-results <- dbSendQuery(con, query)
-dbClearResult(results)
-
-
-
-query <- "DROP TABLE IF EXISTS JobSeeker CASCADE;"
-results <- dbSendQuery(con, query)
-query <- "CREATE TABLE JobSeeker (
-    id			        INT,  
-    location		    TEXT,
-    education_level_id	INT,
-    major_id		    INT,
-    title_id		    INT,
-    industry_id		    INT,
-     PRIMARY KEY (id)
-);
-"
-results <- dbSendQuery(con, query)
-dbClearResult(results)
-
-
+rs = dbSendQuery(con, "select * 
+            from SkillsMeta")
+ds_skills_list_df = fetch(rs, n=-1)
 
 
 dbDisconnect(con)
@@ -159,15 +56,18 @@ dbDisconnect(con)
 ```
 
 
+
+
+
 # Read data
 ```{r}
 
-rm(list=ls())
-
+# read skills data from csv
 skills_df <- read_csv( file = "https://raw.githubusercontent.com/dsimband/DATA607Team3/master/csv/Final_Train_Dataset.csv")
 names(skills_df)[1] <- "id"
 
 
+# build a temporary data frame 
 tmp <- skills_df %>%
     select(id, key_skills) %>%
     separate_rows(
@@ -184,39 +84,76 @@ tmp <- tmp %>%
         key_skills = str_trim(key_skills)
     )
 
+tmp <- tmp %>% 
+  right_join(ds_skills_list_df, by="key_skills" ) %>%
+  rename(
+      key_skills_id = id.y,
+      id = id.x
+  )
 
-ds_skills_df <- tibble ( key_skills = c("sql", "r" , "data science", "python", "matlab", "machine learning"))
-
-
-
-tmp <- tmp %>% filter(key_skills %in% ds_skills_df$key_skills) %>% arrange(id)
-
-
-    
-
+# build a list of user ids that have data science skills
 id_df <- tmp %>%
     select(id) %>%
     distinct()
 
 
-tmp <- skills_df %>% 
+# join the temporary dataframe with the original dataframe
+skills_df <- skills_df %>% 
     inner_join( id_df,by="id" ) %>%
     right_join(tmp, by="id") %>%
-    mutate (
-        flag = TRUE
+    select(-c(job_description,job_desig,key_skills.x)) %>%
+    rename(
+      key_skills = key_skills.y
     )
 
 
+# update the salary
+skills_df <- skills_df %>%
+    separate(
+        salary,
+        c("min_salary" , "max_salary"),
+        convert = TRUE,
+        sep = "to"
+    )
 
 
-tmp <- tmp %>% 
-    spread(key_skills.y, flag, convert=TRUE, fill=FALSE) 
-    
+#write out csv file
+write.csv(skills_df, "/Users/dsimbandumwe/dev/cuny/data_607_T3/DATA607Team3/skills.csv", row.names=FALSE)
 
 
 ```
 
 
+```{r}
+
+# create a wide dataframe for correlation
+t <- skills_df %>% 
+  mutate(
+    flag = 1
+  ) %>%
+  select(-c(key_skills_id,job_type)) %>%
+  mutate (
+   key_skills = str_replace_all(key_skills, " ", "_"),
+   key_skills = str_squish(key_skills),
+   row = row_number()
+  ) 
+t <- t %>%
+  pivot_wider(
+    names_from = key_skills,
+    values_from = flag,
+    values_fill = 0
+  ) 
+t <- t %>% select(-c(id, experience, location, row, company_name_encoded)) 
+
+
+t.rcorr = rcorr(as.matrix(t))
+t.rcorr
+    
+    
+t_cor = cor(t, method = c("spearman"))
+corrplot(t_cor, title="Coorelation Income By Skills")
+
+```
 
 
 
